--- a/languages/lazaruside.fr.po
+++ b/languages/lazaruside.fr.po
@@ -456,44 +456,44 @@ msgstr "La touche Alt met en mode colonne"
 msgid "Alternative Key"
 msgstr "Touche complémentaire"
 
-#: lazarusidestrconsts:lisa2pambigiousancestortype
-msgid "Ambigious Ancestor Type"
+#: lazarusidestrconsts:lisa2pambiguousancestortype
+msgid "Ambiguous Ancestor Type"
 msgstr "Type d'ancêtre ambigu"
 
-#: lazarusidestrconsts:lisa2pambigiousclassname
-msgid "Ambigious Class Name"
+#: lazarusidestrconsts:lisa2pambiguousclassname
+msgid "Ambiguous Class Name"
 msgstr "Nom de classe ambigu"
 
-#: lazarusidestrconsts:lisa2pambigiousunitname
-msgid "Ambigious Unit Name"
+#: lazarusidestrconsts:lisa2pambiguousunitname
+msgid "Ambiguous Unit Name"
 msgstr "Nom d'unité ambigu"
 
-#: lazarusidestrconsts:lisambigiousunitfound
-msgid "Ambigious Unit found"
+#: lazarusidestrconsts:lisambiguousunitfound
+msgid "Ambiguous Unit found"
 msgstr "Unité ambiguë trouvée"
 
-#: lazarusidestrconsts:liscoambigiousadditionalcompilerconfigfile
-msgid "Ambigious additional compiler config file"
+#: lazarusidestrconsts:liscoambiguousadditionalcompilerconfigfile
+msgid "Ambiguous additional compiler config file"
 msgstr "Fichier litigieux de configuration additionnel du compilateur trouvé"
 
 #: lazarusidestrconsts:dlgambigfileact
-msgid "Ambigious file action:"
+msgid "Ambiguous file action:"
 msgstr "Action sur fichier litigieux:"
 
-#: lazarusidestrconsts:lisambigiousfilefound
-msgid "Ambigious file found"
+#: lazarusidestrconsts:lisambiguousfilefound
+msgid "Ambiguous file found"
 msgstr "Fichier litigieux trouvé"
 
-#: lazarusidestrconsts:lisambigiousfilefoundthisfilecanbemistakenwithdelete
-msgid "Ambigious file found: %s%s%s%sThis file can be mistaken with %s%s%s%s%sDelete the ambigious file?"
+#: lazarusidestrconsts:lisambiguousfilefoundthisfilecanbemistakenwithdelete
+msgid "Ambiguous file found: %s%s%s%sThis file can be mistaken with %s%s%s%s%sDelete the ambiguous file?"
 msgstr "Fichier litigieux trouvé: %s%s%s%sCe fichier peut être confondu avec %s%s%s%s%sSupprimer le fichier litigieux ?"
 
-#: lazarusidestrconsts:lisambigiousfilesfound
-msgid "Ambigious files found"
+#: lazarusidestrconsts:lisambiguousfilesfound
+msgid "Ambiguous files found"
 msgstr "Fichiers ambigus trouvés"
 
-#: lazarusidestrconsts:lispkgmangambigiousunitsfound
-msgid "Ambigious units found"
+#: lazarusidestrconsts:lispkgmangambiguousunitsfound
+msgid "Ambiguous units found"
 msgstr "Unités ambiguës trouvées"
 
 #: lazarusidestrconsts:lisa2pancestortype
@@ -1660,8 +1660,8 @@ msgstr "Supprimer le dernier caractère"
 msgid "Delete Old Package File?"
 msgstr "Supprimer l'ancien fichier paquet ?"
 
-#: lazarusidestrconsts:lisdeleteambigiousfile
-msgid "Delete ambigious file?"
+#: lazarusidestrconsts:lisdeleteambiguousfile
+msgid "Delete ambiguous file?"
 msgstr "Supprimer les fichier ambigus ?"
 
 #: lazarusidestrconsts:srkmecdeletechar
@@ -6253,7 +6253,7 @@ msgid "The file %s%s%s%sseems to be the program file of an existing lazarus Proj
 msgstr "Le fichier %s%s%s%ssemble être le fichier programme d'un projet Lazarus existant.%sOuvrir le projet ?%sAnnuler ouvrira le fichier comme un fichier source normal."
 
 #: lazarusidestrconsts:listhefilewasfoundinoneofthesourcedirectoriesofthepac
-msgid "The file %s%s%s%swas found in one of the source directories of the package %s and looks like a compiled unit.Compiled units must be in the output directory of the package, otherwise other packages can get problems using this package.%s%sDelete ambigious file?"
+msgid "The file %s%s%s%swas found in one of the source directories of the package %s and looks like a compiled unit.Compiled units must be in the output directory of the package, otherwise other packages can get problems using this package.%s%sDelete ambiguous file?"
 msgstr "Le fichier %s%s%s%sa été trouvé dans un des répertoires source du paquet %s et semble être une unité compilée. Les unités compilées doivent être dans le répertoire de destination du paquet, sinon d'autres paquets risquent d'avoir des problèmes à utiliser ce paquet.%s%sEffacer le fichier douteux ?"
 
 #: lazarusidestrconsts:listhefilewasnotfounddoyouwanttolocateityourself
@@ -6280,8 +6280,8 @@ msgstr "Le fichier nommé %s%s%s est utilisé par%sle paquet %s%s%s%sdans le fichi
 msgid "The filename %s%s%s does not correspond to the package name %s%s%s in the file.%sChange package name to %s%s%s?"
 msgstr "Le nom de fichier %s%s%s ne correspond pas au paquet nommé %s%s%s dans le fichier.%sChanger le nom du paquet pour %s%s%s?"
 
-#: lazarusidestrconsts:lisa2pthefilenameisambigiouspleasespecifiyafilename
-msgid "The filename %s%s%s is ambigious.%sPlease specifiy a filename with full path."
+#: lazarusidestrconsts:lisa2pthefilenameisambiguouspleasespecifiyafilename
+msgid "The filename %s%s%s is ambiguous.%sPlease specifiy a filename with full path."
 msgstr "Le nom de fichier %s%s%s est ambigu.%sVeuillez spécifier un nom de fichier avec chemin complet."
 
 #: lazarusidestrconsts:listhefollowingpackagesfailedtoload
@@ -6493,7 +6493,7 @@ msgid "There is a circle in the required packages. See package graph."
 msgstr "Il y a une dépendance circulaire dans les paquets requis. Voir le graphique des paquets."
 
 #: lazarusidestrconsts:listhereisafilewiththesamenameandasimilarextension
-msgid "There is a file with the same name and a similar extension ond disk%sFile: %s%sAmbigious File: %s%s%sDelete ambigious file?"
+msgid "There is a file with the same name and a similar extension ond disk%sFile: %s%sAmbiguous File: %s%s%sDelete ambiguous file?"
 msgstr "Un fichier porte le même nom et une extension similaire%sFichier: %s%sFichier litigieux: %s%s%sEffacer le fichier litigieux ?"
 
 #: lazarusidestrconsts:lisexttoolthereisamaximumoftools
@@ -6756,8 +6756,8 @@ msgstr "Impossible de créer le répertoire %s%s%s%spour les sources du paquet %s"
 msgid "Unable to create target directory for lazarus:%s%s%s%s.%sThis directory is needed for the new changed lazarus IDE with your custom packages."
 msgstr "Impossible de créer le répertoire cible pour Lazarus:%s%s%s%s.%sCe répertoire est nécessaire pour le nouvel IDE modifié avec vos paquets personalisés."
 
-#: lazarusidestrconsts:lisunabletodeleteambigiousfile
-msgid "Unable to delete ambigious file %s%s%s"
+#: lazarusidestrconsts:lisunabletodeleteambiguousfile
+msgid "Unable to delete ambiguous file %s%s%s"
 msgstr "Impossible de supprimer le fichier litigieux %s%s%s"
 
 #: lazarusidestrconsts:lispkgmangunabletodeletefilename
@@ -6840,8 +6840,8 @@ msgstr "Impossible de lire l'état du fichier %s%s%s%sdu paquet %s.%sErreur: %s"
 msgid "Unable to remove old backup file %s%s%s!"
 msgstr "Impossible de supprimer l'ancienne copie de sauvegarde %s%s%s!"
 
-#: lazarusidestrconsts:lisunabletorenameambigiousfileto
-msgid "Unable to rename ambigious file %s%s%s%sto %s%s%s"
+#: lazarusidestrconsts:lisunabletorenameambiguousfileto
+msgid "Unable to rename ambiguous file %s%s%s%sto %s%s%s"
 msgstr "Impossible de renommer le fichier litigieux %s%s%s%sen %s%s%s"
 
 #: lazarusidestrconsts:lisunabletorenamefile
@@ -7360,8 +7360,8 @@ msgstr "Avertissement: le fichier additionnel de configuration du compilateur po
 msgid "Warning: The file %s%s%s%sbelongs to the current project."
 msgstr "Avertissement: le fichier %s%s%s%sappartient au présent projet."
 
-#: lazarusidestrconsts:liswarningambigiousfilefoundsourcefileis
-msgid "Warning: ambigious file found: %s%s%s. Source file is: %s%s%s"
+#: lazarusidestrconsts:liswarningambiguousfilefoundsourcefileis
+msgid "Warning: ambiguous file found: %s%s%s. Source file is: %s%s%s"
 msgstr "Avertissement: fichier litigieux trouvé: %s%s%s. Le fichier source est: %s%s%s"
 
 #: lazarusidestrconsts:lismenuviewwatches
