--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -50,10 +50,6 @@ msgstr ""
 msgid "%s - (new project)"
 msgstr ""
 
-#: lazarusidestrconsts:lispkgmangthisfilewasautomaticallycreatedbylazarusdonotedit
-msgid "%s This file was automatically created by Lazarus. Do not edit!%s  This source is only used to compile and install%s  the package %s.%s"
-msgstr ""
-
 #: lazarusidestrconsts:lisuidbytes
 msgid "%s bytes"
 msgstr ""
@@ -684,7 +680,7 @@ msgstr ""
 
 #: lazarusidestrconsts:fdmbringtofront
 msgid "Bring to front"
-msgstr ""
+msgstr "Tuo eteen"
 
 #: lazarusidestrconsts:lisa2pbrokendependencies
 msgid "Broken Dependencies"
@@ -3636,7 +3632,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgrunolocal
 msgid "Local"
-msgstr ""
+msgstr "Paikalliset"
 
 #: lazarusidestrconsts:lismenuviewlocalvariables
 msgid "Local Variables"
@@ -4652,11 +4648,11 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgprojectoptions
 msgid "Project Options"
-msgstr ""
+msgstr "Projektikohtaiset asetukset"
 
 #: lazarusidestrconsts:lismenuprojectoptions
 msgid "Project Options..."
-msgstr "Projekti kohtaiset asetukset"
+msgstr "Projektikohtaiset asetukset"
 
 #: lazarusidestrconsts:lisprojectsrcpath
 msgid "Project Src Path"
@@ -4936,7 +4932,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenurenameidentifier
 msgid "Rename Identifier"
-msgstr "Vaida tunnisteen nimeä"
+msgstr "Vaihda tunnisteen nimeä"
 
 #: lazarusidestrconsts:lisfrirenameallreferences
 msgid "Rename all References"
@@ -5508,7 +5504,7 @@ msgstr ""
 
 #: lazarusidestrconsts:fdmsendtoback
 msgid "Send to back"
-msgstr ""
+msgstr "Vie taka-alalle"
 
 #: lazarusidestrconsts:srkmecsetmarker
 msgid "Set Marker %d"
@@ -5878,10 +5874,6 @@ msgstr ""
 msgid "Switch between form and unit"
 msgstr ""
 
-#: lazarusidestrconsts:dlgsymantecchecking
-msgid "Symantec Checking:"
-msgstr ""
-
 #: lazarusidestrconsts:liscodetoolsoptssymbol
 msgid "Symbol"
 msgstr ""
@@ -5900,6 +5892,10 @@ msgstr ""
 
 #: lazarusidestrconsts:srkmecsyntaxcheck
 msgid "Syntax check"
+msgstr ""
+
+#: lazarusidestrconsts:dlgsyntaxoptions
+msgid "Syntax options"
 msgstr ""
 
 #: lazarusidestrconsts:dlgrunosystemvariables
@@ -6534,6 +6530,10 @@ msgstr ""
 msgid "This file is not in any loaded package."
 msgstr ""
 
+#: lazarusidestrconsts:lispkgmangthisfilewasautomaticallycreatedbylazarusdonotedit
+msgid "This file was automatically created by Lazarus. Do not edit!"
+msgstr ""
+
 #: lazarusidestrconsts:lisresourcefilecomment
 msgid "This is an automatically generated lazarus resource file"
 msgstr ""
@@ -6548,6 +6548,10 @@ msgstr "Tämä vaikuttaa pascal tiedostolta.%sfpc 1.0.x odottaa että pascal tie
 
 #: lazarusidestrconsts:lispkgsysthispackageisinstalledbutthelpkfilewasnotfound
 msgid "This package is installed, but the lpk file was not found.All its components are deactivated. Please fix this."
+msgstr ""
+
+#: lazarusidestrconsts:lispkgmangthissourceisonlyusedtocompileandinstallthepackage
+msgid "This source is only used to compile and install the package."
 msgstr ""
 
 #: lazarusidestrconsts:listhisstatementcannotbeextractedpleaseselectsomecode
